k8/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: europe-west1-docker.pkg.dev/beiron-photography-app/docker-artifacts/frontend:LATEST
          name: frontend
          ports:
            - containerPort: 3000
