k8/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  ports:
    - port: 3000
      name: http
      protocol: TCP
  selector:
    app: frontend
