k8/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.global-static-ip-name: static-photography-app-ip
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              name: frontend-port
      - path: /photo-api
        pathType: ImplementationSpecific
        backend:
          service:
            name: photo-api
            port:
              name: photo-api-port
      - path: /image-api
        pathType: ImplementationSpecific
        backend:
          service:
            name: image-api
            port:
              name: image-api-port
